--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,22 @@
 #root {
-  max-width: 1280px;
+  max-width: 100%;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+}
+.form-container {
+  background-color: azure;
+  border-radius: 0.5rem !important;
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+}
+.signUp-icon {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1rem;
+
+}
+.register-container{
+  background-color: rgb(231, 237, 242);
+ 
 }
